Fixed some spacing

--- a/style.css
+++ b/style.css
@@ -265,14 +265,14 @@ body {
 }
 
 #about {
-    width:100%;
+    width: 100%;
 }
 
 #about.intro {
     display: flex;
     align-items: center; 
     justify-content: center;
-    padding: 40px 0; 
+    padding: 0 0; 
     gap: 20px; 
     margin-right: 0; 
     margin-left : 0;
@@ -283,11 +283,12 @@ body {
     align-items: center;
     margin-right: 0; 
     margin-left : 18%;
+    max-width: 100%;
 }
 
 #grad-pic {
     max-width: 400px; 
-    height: auto;
+    height: 530px;
     border-radius: 10px; 
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
     transition: transform 0.5s ease, filter 0.5s ease;
@@ -559,15 +560,19 @@ h2 {
         padding: 40px 0;
         justify-content: center; /* Horizontally center items */
         align-items: center;
+
     }
 
     #grad-pic {
         max-width: 150px;
+        height: 270px;
         border-radius: 50%; 
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         margin-right: 0;
         margin-left: 1%;
     }
+
+   
 
     /* About Me Text styles */
     #aboutme {
